# perfect-synergies

./: .gitignore  Cargo.toml  data_analysis.py  get_perfect_synergies.py  perf.data  perfect_synergies.json  profile-perfect-syns.sh  ranked_units.csv  rate_perfect_synergies.py  scrape_lolgraphs.csv  src_power_levels.json  traits.csv
src/: champs.csv  genall.sh  ltn_synergies_0.json  ltn_synergies_3.json  ltn_synergies_waste_1.json  ltn_synergies_waste_2.json  ltn_synergies_waste_3.json  ltn_synergies_waste_4.json  ltn_synergies_waste_size_3_to_8_maxloss_3.json  main.rs  perfect_synergies.json  teams_sizes_1_to_3_max_waste_3.json  traits.csv
src/out_data/: teams_sizes_1_to_3_max_waste_3.json  teams_sizes_2_to_6_max_waste_0.json
