[package]
name = "perfect-synergies"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.2"
itertools = "0.10.3"
serde_json = "1.0.81"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
